task5/non-admin-api-allow.yaml
# Сетевая политика для front-end -> back-end-api
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
spec:
  podSelector:
    matchLabels:
      role: back-end-api-app
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: front-end-app
    ports:
    - protocol: TCP
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-frontend
spec:
  podSelector:
    matchLabels:
      role: front-end-app
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: back-end-api-app
    ports:
    - protocol: TCP
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-frontend-to-admin-backend
spec:
  podSelector:
    matchLabels:
      role: admin-back-end-api-app
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: admin-front-end-app
    ports:
    - protocol: TCP
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-backend-to-admin-frontend
spec:
  podSelector:
    matchLabels:
      role: admin-front-end-app
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: admin-back-end-api-app
    ports:
    - protocol: TCP
      port: 80
